--- a/main.css
+++ b/main.css
@@ -21,3 +21,17 @@
   right: -29px;
   top: 2px;
 }
+
+.bird:after {
+  content: '';
+  display: block;
+  position: absolute;
+  display: block;
+  width: 60px;
+  height: 90px;
+  background-color: #006ECD;
+  border-radius: 50px 50px 100px 0;
+  transform: rotateZ(90deg);
+  top: 40px;
+  left: -20px;
+}
